# python-and-r

./: .gitignore  LICENSE  README.md
04-03-2026-lists-and-loops/: pyproject.toml
04-03-2026-lists-and-loops/src/asighnment_one/: Asignment-One.md
04-03-2026-lists-and-loops/src/assignment_four/: Assignment-Four.md  assignment_four.py
04-03-2026-lists-and-loops/src/assignment_one/: assignment_one.py
04-03-2026-lists-and-loops/src/assignment_three_point_five/: Assignment-Three-Point-Five.md  assignment_three_point_five.py
11-03-2026-perceptron/src/perceptron/: Perceptron.md  main.py
25-02-2026-introduction/: pyproject.toml
25-02-2026-introduction/src/: Asignment-One.md  Asignment-Two.md  asignment_one.py  asignment_two.py
