[project]
name = "lists-and-loops-assignment"
version = "0.1.0"
description = "Python 13 Lists and Loops assignment workspace"
requires-python = ">=3.12"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
